--- a/WebContent/public/head.jspf
+++ b/WebContent/public/head.jspf
@@ -2,7 +2,10 @@
     pageEncoding="UTF-8"%>
 <%@taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c" %>
 <c:set value="${pageContext.request.contextPath}" var="shop"/>
-<title>易购商城</title>
+<title>test</title>
+
+<link rel="stylesheet" href="${shop}/css/public.css"/>
+<link rel="stylesheet" href="${shop}/css/style.css"/>
 
 <!-- 下面是easyui的环境 -->  
 <link rel="stylesheet" href="${shop}/easyui/themes/icon.css" type="text/css"></link>  
